objects/Release_Note__kav.object
<CustomObject>
    <fields>
        <fullName>Issue__c</fullName>
        <label>Issue</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_ArticleId__c</fullName>
        <label>Legacy Source ArticleId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_ArticleNo__c</fullName>
        <label>Legacy Source ArticleNo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Source_ID__c</fullName>
        <label>Legacy Source ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Created_Date__c</fullName>
        <formula>Original_Created_Date_ref__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Created_Date_ref__c</fullName>
        <defaultValue>NOW ()</defaultValue>
        <description>Used to store the original creation date for the article.</description>
        <label>Original Created Date ref</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General Information</fullName>
                </value>
                <value>
                    <fullName>Lanyon Group</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings-Attendee Management</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings-Business Intelligence</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings-New Registration</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings-Simple Meetings</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings-Spend Management</fullName>
                </value>
                <value>
                    <fullName>Lanyon Mobile</fullName>
                </value>
                <value>
                    <fullName>Lanyon MPoint</fullName>
                </value>
                <value>
                    <fullName>Lanyon Venues</fullName>
                </value>
                <value>
                    <fullName>Lanyon Passkey</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-Channel Publisher</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-GDS Access</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-HODPublisher</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-Market Leads</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-Marketplace Intelligence</fullName>
                </value>
                <value>
                    <fullName>Lanyon Transient-RFP Management</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Engagements &amp; Projects</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Hotel Directory</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Market Leads</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Marketplace Intelligence</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Reverse Auction</fullName>
                </value>
                <value>
                    <fullName>Lanyon Travel-Transient Sourcing</fullName>
                </value>
                <value>
                    <fullName>Rate Integrity-Rate Audit</fullName>
                </value>
                <value>
                    <fullName>Rate Integrity-Rate Availability</fullName>
                </value>
                <value>
                    <fullName>Rate Integrity-Reverse Audit</fullName>
                </value>
                <value>
                    <fullName>RegOnline by Lanyon</fullName>
                </value>
                <value>
                    <fullName>RegOnline Classic by Lanyon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related__c</fullName>
        <label>Related</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <defaultValue>NOW () + 366</defaultValue>
        <label>Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <page>cs_ReleaseNoteView</page>
            <template>Page</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <page>cs_ReleaseNoteView</page>
            <template>Page</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>Lanyon article type</description>
    <label>Release Note (Lanyon)</label>
    <pluralLabel>Release Notes(Lanyon)</pluralLabel>
</CustomObject>